# RustOS

./: .gitignore  Cargo.toml  Makefile  README.md  RustOS.iso  build.rs  linker.lds  x86_64-kernel.json
.config/: cargo.conf
apps/: .gitignore
apps/cat/src/: main.rs
apps/doom/: Cargo.toml  build.rs  config.h  d_main.c  doom.asm  doomgeneric.c  freestanding_fix.h  i_endoom.c  i_system.c  m_config.c  v_video.c
apps/doom/src/: main.rs
apps/doomgeneric/: Cargo.toml  Makefile  assert.h  build.rs  ctype.h  errno.h  fcntl.h  hu_stuff.c  i_joystick.c  inttypes.h  kernel_compat.h  math.h  p_switch.c  r_data.c  stdio.h  stdlib.h  strings.h  unistd.h
apps/doomgeneric/include/: inttypes.h
apps/doomgeneric/src/: main.rs
apps/doomgeneric/sys/: stat.h  types.h
apps/hello/: Cargo.toml  linker.ld
apps/hello/.cargo/: config.toml
apps/hello/src/: main.rs
apps/micro/: Cargo.toml
apps/micro/.cargo/: config.toml
apps/micro/src/: main.rs
apps/pico/: Cargo.toml
apps/pico/.cargo/: config.toml
apps/pico/src/: main.rs
apps/quake/: Cargo.toml  build.rs
apps/quake/.cargo/: config.toml
apps/quake/WinQuake/: common.c  cvar.c  d_edge.c  d_polyse.c  d_sprite.c  d_surf.c  in_null.c  model.c  pr_edict.c  r_alias.c  r_draw.c  screen.c  sv_phys.c  sys_null.c  vid_rustos.c  zone.c
apps/quake/src/: main.rs  strtod_shim.c
apps/quake/src/libc/: jmp.rs  math.rs  memory.rs  mod.rs  stdio.rs  string.rs
iso_root/: kernel.elf  limine.conf
libs/rustos_user/: Cargo.toml
libs/rustos_user/src/: lib.rs
simple-fatfs-local/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml
simple-fatfs-local/.github/workflows/: test.yml
simple-fatfs-local/src/: codepage.rs  error.rs  lib.rs  time.rs
simple-fatfs-local/src/fat/: block_io.rs  block_translator.rs  bpb.rs  consts.rs  file.rs  fs.rs  mod.rs  options.rs  storage.rs  tests.rs  types.rs
simple-fatfs-local/src/fat/direntry/: location.rs  mod.rs  public.rs  raw.rs  ser_de.rs  time.rs
simple-fatfs-local/src/utils/: mod.rs  string.rs
simple-fatfs-local/src/utils/bloom/: bitmap.rs  mod.rs
simple-fatfs-local/tests/: block_translator.rs
src/: c_bridge.rs  doom_generic.rs  globals.rs  helpers.rs  interrupts.rs  keyboard.rs  main.rs  program_loader.rs  renderer.rs  serial.rs  shell.rs  timer.rs
src/fs/: fat_driver.rs  mod.rs
src/interrupts/: asm_stubs.rs  fs_syscalls.rs  handlers.rs  idt.rs  mod.rs  syscall.rs
src/io/: ata_driver.rs  keyboard.rs  log_buffer.rs  mod.rs  mouse.rs  serial.rs  writer.rs
src/memory/: c_mem_bridge.rs  frame.rs  heap.rs  mod.rs  paging.rs
src/multitasker/: mod.rs  scheduler.rs  task.rs
src/screen/: font.rs  graphics.rs  mod.rs  renderer.rs  vfb.rs
