[package]
name = "RustOS"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "RustOS"
path = "src/main.rs"
test = false
bench = false


[dependencies]
limine = "0.5.0"
spin = "0.10.0"
x86_64 = { version = "0.15", features = ["instructions"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
