[package]
name = "RustOS"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "RustOS"
path = "src/main.rs"
test = false
bench = false


[dependencies]
bitflags = "2.10.0"
crossbeam-queue = {version="0.3.12", default-features = false, features = ["alloc"]}
lazy_static = {version="1.5.0", default-features = false, features = ["spin_no_std"]}
limine = "0.5.0"
linked_list_allocator = "0.10.5"
spin = "0.10.0"
x86_64 = { version = "0.15", features = ["instructions"] }

[profile.dev]
panic = "abort"
strip = false
opt-level = 0
split-debuginfo = "off"

[profile.release]
panic = "abort"
